// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redeem Yield should render Redeem Yield Screen 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root subtext MuiTypography-body1 MuiTypography-alignCenter"
      >
        Redeemable Amount
      </p>
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-1 makeStyles-root-2 undefined MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Redeem Yield
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Redeem Details
      </h5>
      <div
        class="makeStyles-root-3 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-5"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Next Reward Amount
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          0.2146 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-3 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-6"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Next Reward Yield
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          0.2146%
        </p>
      </div>
      <div
        class="makeStyles-root-3 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            ROI (5-Day Rate)
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          3.2692%
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        class="makeStyles-root-3 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-8"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Total sOHM Donated
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          100 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-3 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-9"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Donated sOHM Yield
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          10 sOHM
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    />
  </div>
</div>
`;

exports[`Redeem Yield should show extra content if project wallet 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root subtext MuiTypography-body1 MuiTypography-alignCenter"
      >
        Redeemable Amount
      </p>
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-49 makeStyles-root-50 undefined MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Redeem Yield
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Redeem Details
      </h5>
      <div
        class="makeStyles-root-51 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-53"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Next Reward Amount
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          0.2146 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-51 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-54"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Next Reward Yield
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          0.2146%
        </p>
      </div>
      <div
        class="makeStyles-root-51 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-55"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            ROI (5-Day Rate)
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          3.2692%
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        class="makeStyles-root-51 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-56"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Total sOHM Donated
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          100 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-51 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-57"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Donated sOHM Yield
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          10 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-51 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-58"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            % of sOHM Goal
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          50
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    />
  </div>
</div>
`;

exports[`Redeem Yield should show redeemable balance as 100 sOHM 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root subtext MuiTypography-body1 MuiTypography-alignCenter"
      >
        Redeemable Amount
      </p>
      <h3
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter"
        data-testid="redeemable-balance"
      >
        100
         sOHM
      </h3>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        />
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-37 makeStyles-root-38 undefined MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Redeem Yield
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
      >
        Redeem Details
      </h5>
      <div
        class="makeStyles-root-39 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-41"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Next Reward Amount
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          0.2146 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-39 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-42"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Next Reward Yield
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          0.2146%
        </p>
      </div>
      <div
        class="makeStyles-root-39 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-43"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            ROI (5-Day Rate)
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          3.2692%
        </p>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        class="makeStyles-root-39 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-44"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Total sOHM Donated
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          100 sOHM
        </p>
      </div>
      <div
        class="makeStyles-root-39 data-row"
      >
        <div
          class="MuiBox-root MuiBox-root-45"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          >
            Donated sOHM Yield
          </p>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorPrimary"
          style="text-align: right;"
        >
          10 sOHM
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    />
  </div>
</div>
`;
